plugins {
    id 'java'
    id 'maven-publish'
    id 'com.jfrog.artifactory' version '4.9.7'
}

group 'com.spoohapps'

version '0.8.0'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
    jcenter()
}

jar {
    from sourceSets.main.output
    from (sourceSets.test.output) {
        include "com/spoohapps/farcommon/testhelpers/**"
    }
    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

dependencies {

    compile group: 'javax.inject', name: 'javax.inject', version: '1'
    
    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'

    compile group: 'com.rabbitmq', name: 'amqp-client', version: '5.2.0'

    compile group: 'org.glassfish.grizzly', name: 'grizzly-http-client', version: '1.15'
    
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.6'

    compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.9.6'
    
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.6'

    compile group: 'io.lettuce', name: 'lettuce-core', version: '5.1.3.RELEASE'

    testCompile group: 'junit', name: 'junit', version: '4.12'
    
    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.0.2'
    
    testCompile group: 'com.squareup.okhttp3', name: 'mockwebserver', version: '3.14.2'
    
    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.28.2'

    testRuntime group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.0.2'

    testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.0.2'
    
    testRuntime group: 'org.junit.vintage', name: 'junit-vintage-engine', version: '4.12.2'
}

publishing {
    publications {
        farcommon(MavenPublication) {
            from components.java
        }
    }
}

artifactory {
    publish {
        contextUrl = 'https://www.spoohapps.com/artifactory'
        repository {
            repoKey = "libs-release-local"
            username = artifactory_username
            password = artifactory_password
        }
        defaults {
            publications('farcommon')
        }
    }
}

compileJava {
    options.compilerArgs << '-XDenableSunApiLintControl'
    options.compilerArgs << '-Xlint:sunapi'
}
